# A1_GdR_SSI_UE6_Conception_d_application

./: .gitignore  barrage.db  pyproject.toml
docs/: besoin_maintenance.md  besoin_meteo.md  besoin_production.md  bla.txt
generate_data/: README.md  centrale_parametres_data.csv  create_database.py  database_structure.md  intervention_data.csv  maintenance_data.csv  meteo_data.csv  meteo_previsions_data.csv  production_data.csv
meteo/: barrage.db  database.py  main.py  projet.md
meteo/models/: forecast.py
meteo/routers/: forecast_router.py
meteo/services/: alerts_service.py  forecast_service.py  plotting_service.py
meteo/templates/: index.html
si_barrage/: main.py
si_barrage/modules/dashboard/: __init__.py  router.py  services.py
si_barrage/modules/maintenance/: models.py  router.py  schemas.py  services.py  ui_router.py
si_barrage/modules/maintenance/tdb/: DOC_API_TDB.md  router.py  services.py
si_barrage/modules/meteo/: router.py  router_dashboard.py  services.py
si_barrage/modules/production/: Calcul et simulation.py  GRAPHIQUE.py  dashboard_v1.py  models.py  router.py
si_barrage/tests/: test_maintenance.py  test_meteo.py
