[project]
name = "si-barrage"
version = "0.1.0"
description = "A project for SI Barrage."
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "SQLAlchemy",
    "pandas",
    "plotly",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.setuptools]
packages = ["si_barrage"]
